[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali-date-library"
version = "0.0.1"
description = "A Python library for Nepali date conversion and manipulation"
authors = [{ name = "Sandip Ghimire", email = "sandipghimire2076@gmail.com" }]
readme = "ReadMe.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["nepali", "date", "calendar", "conversion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
