[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali-date-library"
version = "1.0.0"
description = "A Nepali Date Library for Python (Bikram Sambat ↔ AD conversion and manipulation)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

authors = [{ name = "Sandip Ghimire", email = "sandipghimire2076@gmail.com" }]

keywords = [
    "nepali",
    "nepal",
    "nepali-date-library",
    "nepali-calendar",
    "nepali-date",
    "bikram-sambat",
    "bs-date",
    "date-conversion",
    "ad-to-bs",
    "bs-to-ad",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.urls]
Homepage = "https://nepalidate.sandip-ghimire.com.np"
Repository = "https://github.com/SandipGhimire/Nepali-Date-Library-Python"
Issues = "https://github.com/SandipGhimire/Nepali-Date-Library-Python/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8", "mypy", "build", "twine", "taskipy"]

[tool.taskipy.tasks]
test = "black --check src && flake8 src && pytest"
build = "python -m build"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.9"
strict = true
